--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_query">QueryActivity</string>
     <string name="title_activity_picture">PictureActivity</string>
+    <string name="action_search">搜索</string>
+    <string name="action_photo">拍照</string>
 </resources>
