--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="dialog_search">搜索</string>
     <string name="dialog_cancel">取消</string>
     <string name="dialog_query">请输入关键字</string>
+    <string name="dialog_OK">好的</string>
+    <string name="dialog_tag">标签</string>
 </resources>
